--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <header>
-        <div>Header Logo</div>
-        <div>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
     </header>
 
     <div>
