--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </ul>
     </header>
 
-    <div>
-        <div>
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+    <div class="hero">
+        <div class="left">
+            <div class="main">This website is awesome</div>
+            <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <button>Sign up</button>
         </div>
         
-        <div>This is a placeholder for an image</div>
+        <div class="placeholder">This is a placeholder for an image</div>
     </div>
 
     <div>
