Complete styling the section with image containers

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
         <div class="placeholder">This is a placeholder for an image</div>
     </div>
 
-    <div>
-        <div>Some random information</div>
-        <div>
-            <div>
-                <div></div>
-                <div>This is some subtext under an illustration</div>
+    <div class="info">
+        <div class="txt">Some random information</div>
+        <div class="cards">
+            <div class="card">
+                <div class="container"></div>
+                <div class="subtext">This is some subtext under an illustration</div>
             </div>
-            <div>
-                <div></div>
-                <div>This is some subtext under an illustration</div>
+            <div class="card">
+                <div class="container"></div>
+                <div class="subtext">This is some subtext under an illustration</div>
             </div>
-            <div>
-                <div></div>
-                <div>This is some subtext under an illustration</div>
+            <div class="card">
+                <div class="container"></div>
+                <div class="subtext">This is some subtext under an illustration</div>
             </div>
-            <div>
-                <div></div>
-                <div>This is some subtext under an illustration</div>
+            <div class="card">
+                <div class="container"></div>
+                <div class="subtext">This is some subtext under an illustration</div>
             </div>
         </div>
     </div>
