--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         </div>
     </div>
 
-    <div>
-        <div>This is an inspiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will
+    <div class="quote">
+        <div class="text">This is an inspiring quote, or just a testimonial from a customer. Maybe it's just filling up space, or maybe people will
             actually read it. Who knows? All I know is that it looks nice.
         </div>
-        <div>-Thor, God of Thunder</div>
+        <div class="speaker">-Thor, God of Thunder</div>
     </div>
     
     <div>
