--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="speaker">-Thor, God of Thunder</div>
     </div>
     
-    <div>
+    <div class="prompt">
         <div>
             <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button>Sign Up</button>
     </div>
